--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,7 +19,6 @@ body {
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
-.marketing,
 .footer {
   padding-left: 15px;
   padding-right: 15px;
@@ -49,7 +48,6 @@ body {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
@@ -59,13 +57,10 @@ body {
   }
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-  p + h4 {
-    margin-top: 28px;
-  }
+.phoneBackground {
+  width: 100%;
 }
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -75,7 +70,6 @@ body {
 
   /* Remove the padding we set earlier */
   .header,
-  .marketing,
   .footer {
     padding-left: 0;
     padding-right: 0;
@@ -90,4 +84,9 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+html, body {
+    overflow-x: hidden;
+    overflow-y: auto;
 }
