--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,9 @@
 $icon-font-path: '../fonts/';
 
 body {
-  opacity: 0;
-
+  padding: 0;
+  margin: 0;
+  background-color: #090919;
   animation-fill-mode: forwards;
     -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 1s; /* Firefox < 16 */
@@ -49,12 +50,6 @@ body {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
-}
-
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
