--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -1,7 +1,7 @@
-@mixin animation_delay($delay) {
-  -webkit-animation-delay: $delay;
-     -moz-animation-delay: $delay;
-      -ms-animation-delay: $delay;
-       -o-animation-delay: $delay;
-          animation-delay: $delay;
+@mixin all-animation($animation) {
+  -webkit-animation: $animation;  /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: $animation;  /* Firefox < 16 */
+      -ms-animation: $animation;  /* Internet Explorer */
+       -o-animation: $animation;  /* Opera < 12.1 */
+          animation: $animation;
 }
