--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,22 @@ body {
   to   { opacity: 1; }
 }
 
+div {
+  padding: 0px;
+  margin: 0px;
+}
+
+.moon {
+  background: url("/images/moon.png") no-repeat top center;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  width: 100%;
+  height: 512px;  
+  color: white;
+}
+
 .content {
   margin: 0 auto;
 }
