--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,12 +14,20 @@ $icon-font-path: '../fonts/';
 body {
   padding: 0;
   margin: 0;
-  background-color: #090919;
   opacity: 0;
 
   animation-fill-mode: forwards;
   @include all-animation(fadein 1s);
 
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,090919+100 */
+  background: #000000; /* Old browsers */
+  background: -moz-linear-gradient(top, #000000 0%, #090919 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#090919)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #000000 0%,#090919 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #000000 0%,#090919 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #000000 0%,#090919 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #000000 0%,#090919 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#090919',GradientType=0 ); /* IE6-9 */
 }
 
 @mixin fadein {
