--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,14 +4,20 @@
 
 @import "mixins";
 
-
 $icon-font-path: '../fonts/';
 
 /*======================================================*\
  * Body
 \*======================================================*/
+html, body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
 
 body {
+  font-family: Arial,Helvetica,Sans-Serif;
+  font-size: 12px;
+
   padding: 0;
   margin: 0;
   opacity: 0;
@@ -59,11 +65,17 @@ body {
   @include fadein;
 }
 
+/*======================================================*\
+ * Global
+\*======================================================*/
 div {
   padding: 0px;
   margin: 0px;
 }
 
+/*======================================================*\
+ * Parallax Elements
+\*======================================================*/
 .moon {
   background: url("/images/moon.png") no-repeat top center;
   -webkit-background-size: contain;
@@ -79,83 +91,39 @@ div {
   margin: 0 auto;
 }
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
 .footer {
-  padding-left: 15px;
-  padding-right: 15px;
+  position: relative;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
+.social {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  width: 200px;
+  margin-left: -100px;
+  color: white;
+  text-align: center;
+  font-size: 18px;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.scroll-up {
+  opacity: 0;
+
+  position: fixed;
+  top: 20px;
+  color: white;
+  left: 50%;
+  width: 200px;
+  margin-left: -100px;
+  text-align: center;
+
+  @include transition(opacity 1s ease-in-out);
+}
+
+.scroll-up-show {
+  opacity: 1;
 }
 
 .container-narrow > hr {
   margin: 30px 0;
-}
-
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-.phoneBackground {
-  width: 100%;
-}
-
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
-
-html, body {
-    overflow-x: hidden;
-    overflow-y: auto;
 }
