--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   margin: 0;
   opacity: 0;
-
+  animation-play-state: paused;
   animation-fill-mode: forwards;
   @include all-animation(fadein 1s);
 
