--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -73,6 +73,10 @@ div {
   margin: 0px;
 }
 
+.phoneBackground {
+  width: 100%;
+}
+
 /*======================================================*\
  * Parallax Elements
 \*======================================================*/
@@ -85,10 +89,6 @@ div {
   width: 100%;
   height: 512px;  
   color: white;
-}
-
-.content {
-  margin: 0 auto;
 }
 
 .footer {
@@ -104,6 +104,9 @@ div {
   color: white;
   text-align: center;
   font-size: 18px;
+  a {
+    color: white;
+  }
 }
 
 .scroll-up {
@@ -124,6 +127,3 @@ div {
   opacity: 1;
 }
 
-.container-narrow > hr {
-  margin: 30px 0;
-}
