--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -78,6 +78,17 @@ div {
 }
 
 /*======================================================*\
+ * Canvas Overlay
+\*======================================================*/
+#canvasOverlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;  
+}
+
+/*======================================================*\
  * Parallax Elements
 \*======================================================*/
 .moon {
