--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,15 +25,15 @@ body {
   animation-fill-mode: forwards;
   @include all-animation(fadein 1s);
 
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,#080B1A+100 */
-  background: #000000; /* Old browsers */
-  background: -moz-linear-gradient(top, #000000 0%, #080B1A 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#080B1A)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #000000 0%,#080B1A 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #000000 0%,#080B1A 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #000000 0%,#080B1A 100%); /* IE10+ */
-  background: linear-gradient(to bottom, #000000 0%,#080B1A 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#080B1A',GradientType=0 ); /* IE6-9 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010105+0,090919+76 */
+  background: #010105; /* Old browsers */
+  background: -moz-linear-gradient(top,  #010105 0%, #090919 76%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#010105), color-stop(76%,#090919)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #010105 0%,#090919 76%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #010105 0%,#090919 76%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #010105 0%,#090919 76%); /* IE10+ */
+  background: linear-gradient(to bottom,  #010105 0%,#090919 76%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010105', endColorstr='#090919',GradientType=0 ); /* IE6-9 */
 }
 
 @mixin fadein {
