--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -73,8 +73,8 @@ div {
   margin: 0px;
 }
 
-.phoneBackground {
-  width: 100%;
+.background-spacer {
+  height: 2000px;
 }
 
 /*======================================================*\
