Cleaning up embers so that the canvas is properly id'd as embers.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -82,7 +82,7 @@ div {
 /*======================================================*\
  * Canvas Overlay
 \*======================================================*/
-#canvasOverlay {
+#embers {
   position: fixed;
   width: 100%;
   height: 100%;
