--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -141,7 +141,7 @@ div {
 }
 
 .background-spacer {
-  height: 2000px;
+  height: 300em;
 }
 
 /*======================================================*\
@@ -152,7 +152,7 @@ body {
   color: white;
 }
 .section {
-  height: 100vh;
+  height: 70em;
 }
 
 .wrapper {
@@ -160,14 +160,50 @@ body {
   margin: auto;
 }
 
-#section-campfire {
-  position: relative;
-  #campfire-wrapper {
-    @extend .wrapper;
+.btn {
+  border: .1em solid white;
+  padding: 1.2em 2em;
+  font-size: 1.2em;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  &:hover {
   }
+}
+#campfire-video {
+  height:100%;
+}
+#campfire-wrapper {
+  @extend .wrapper;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-left: -30em;
+  width: 60em;
+  text-align: center;
+  div {
+    font-size: 3em;
+    font-weight: 200;
+    span {
+      display: inline-block;
+    }
+  }
+  #btn-find-story {
+    position: absolute;
+    left: 0;
+    margin-top: 4em;
+  }
+  #btn-telling-it {
+    position: absolute;
+    right: 0;
+    margin-top: 4em;
+  }
+}
 
-  #campfire-aside {
-    
-  }
+#campfire-aside {
+  position: absolute;
+  bottom: 8em;
+  right: 12em;
+  width: 20em;
 }
 
