--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -84,6 +84,7 @@ div {
 \*======================================================*/
 #embers {
   position: fixed;
+  z-index: -1;
   width: 100%;
   height: 100%;
   left: 0px;
@@ -106,6 +107,8 @@ div {
 
 .footer {
   position: relative;
+  height: 800px;
+  overflow: hidden;
 }
 
 .social {
@@ -182,13 +185,16 @@ body {
 }
 
 #campfire-video {
+  position: relative;
+  z-index: -2;
   height:100%;
   width:100%;
 }
+
 #campfire-wrapper {
   @extend .wrapper;
   position: absolute;
-  top: 40%;
+  bottom: 60%;
   left: 50%;
   margin-left: -30em;
   width: 60em;
