Initial implementation of ScrolLMagic and playing around with settings to get to work with the reverse scroll.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -93,6 +93,10 @@ div {
 }
 
 /*======================================================*\
+ * Layout
+\*======================================================*/
+
+/*======================================================*\
  * Parallax Elements
 \*======================================================*/
 .moon {
@@ -151,6 +155,13 @@ div {
 body {
   color: white;
 }
+
+.content-wrapper {
+  position: relative;
+  height: 1400px;  
+  overflow: hidden;
+}
+
 .section {
   position: relative;
   height: 70em;
