--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -84,6 +84,13 @@ div {
   position: relative;
 }
 
+.fill {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
 /*======================================================*\
  * Canvas Overlay
 \*======================================================*/
@@ -136,6 +143,11 @@ div {
   text-align: center;
 
   @include transition(opacity 1s ease-in-out);
+}
+
+.scroll-up img {
+  width: 80px;
+  height: 80px;
 }
 
 .scroll-up-show {
@@ -199,8 +211,8 @@ body {
 #campfire-video {
   position: relative;
   z-index: -2;
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
 }
 
 #campfire-wrapper {
@@ -212,8 +224,8 @@ body {
   width: 60em;
   text-align: center;
   div {
-    font-size: 3em;
-    font-weight: 200;
+    font-size: 2.5em;
+    font-weight: 100;
     span {
       display: inline-block;
     }
@@ -232,8 +244,8 @@ body {
 
 #campfire-aside {
   position: absolute;
-  bottom: 8em;
-  right: 12em;
+  bottom: 1em;
+  right: 2em;
   width: 20em;
 }
 
@@ -250,4 +262,5 @@ body {
   margin-left: -37.5%;
   opacity: 0;
   width: 75%;
+  height: 400px;
 }
