--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,8 @@ html, body {
 }
 
 body {
+  color: white;
+
   font-family: roboto-light;
   font-size: 12px;
 
@@ -30,12 +32,12 @@ body {
 
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010105+0,090919+76 */
   background: #010105; /* Old browsers */
-  background: -moz-linear-gradient(top,  #010105 0%, #090919 76%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#010105), color-stop(76%,#090919)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #010105 0%,#090919 76%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #010105 0%,#090919 76%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #010105 0%,#090919 76%); /* IE10+ */
-  background: linear-gradient(to bottom,  #010105 0%,#090919 76%); /* W3C */
+  background: -moz-linear-gradient(top,  #010105 0%, #090919 51%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#010105), color-stop(51%,#090919)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #010105 0%,#090919 51%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #010105 0%,#090919 51%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #010105 0%,#090919 51%); /* IE10+ */
+  background: linear-gradient(to bottom,  #010105 0%,#090919 51%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010105', endColorstr='#090919',GradientType=0 ); /* IE6-9 */
 }
 
@@ -76,6 +78,11 @@ div {
   margin: 0px;
 }
 
+h1, h2, h3, h4, h5, h6, h7 {
+  font-family: "Oswald", san-serif;
+  font-weight: 100;
+}
+
 .phoneBackground {
   width: 100%;
 }
@@ -89,6 +96,22 @@ div {
   height: 100%;
   margin: 0px;
   padding: 0px;
+}
+
+.quote-orange {
+  color: #ff9900;
+  font-size: 24px;
+  font-family: "Oswald", san-serif;
+  font-weight: 100;
+}
+
+.white-line {
+  position: absolute;
+  left: 50%;
+  margin-left: -100px;
+  width: 200px;
+  height: 2px;
+  background-color: white;
 }
 
 /*======================================================*\
@@ -131,11 +154,25 @@ div {
   }
 }
 
+/*======================================================*\
+ * Parallax Triggers
+\*======================================================*/
+#section-about-trigger {
+  height: 1200px;
+}
+
+#section-campfire-trigger {
+  height: 1200px;
+}
+
+/*======================================================*\
+ * Scroll up
+\*======================================================*/
 .scroll-up {
   opacity: 0;
 
   position: fixed;
-  top: 20px;
+  top: 10%;
   color: white;
   left: 50%;
   width: 200px;
@@ -157,21 +194,6 @@ div {
 /*======================================================*\
  * Page css
 \*======================================================*/
-
-body {
-  color: white;
-}
-
-.content-wrapper {
-  position: relative;
-}
-
-.section {
-  position: relative;
-  height: 70em;
-  margin: 10em 0em 0em 0em;
-}
-
 .narrator-logo {
   width: 3em;
   position: absolute;
@@ -208,21 +230,23 @@ body {
   left: 2em;
 }
 
-#campfire-video {
-  position: relative;
-  z-index: -2;
-  height: 100%;
-  width: 100%;
-}
-
 #campfire-wrapper {
   @extend .wrapper;
+
   position: absolute;
-  bottom: 60%;
+  bottom: 50%;
   left: 50%;
   margin-left: -30em;
   width: 60em;
   text-align: center;
+
+  h1 {
+    font-size: 36px;
+    margin: 0em 0em;
+    font-weight: 100;
+    font-family: "roboto-light", san-serif;
+  }
+
   div {
     font-size: 2.5em;
     font-weight: 100;
@@ -230,11 +254,13 @@ body {
       display: inline-block;
     }
   }
+
   #btn-find-story {
     position: absolute;
     left: 0;
     margin-top: 4em;
   }
+
   #btn-telling-it {
     position: absolute;
     right: 0;
@@ -244,23 +270,77 @@ body {
 
 #campfire-aside {
   position: absolute;
-  bottom: 1em;
+  bottom: 0em;
   right: 2em;
   width: 20em;
+  font-size: 11px;
 }
 
-#section-campfire {
-  position: relative;
+#campfire-video {
+  position: fixed;
+  z-index: -2;
   width: 100%;
-  overflow: hidden;
+  bottom: 0px;
 }
 
-#section-campfire-child {
-  position: absolute;
+#section-about {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  bottom: 0px;
+}
+
+#section-about-child {
+  position: fixed;
   top: 1000px;
   left: 50%;
   margin-left: -37.5%;
   opacity: 0;
   width: 75%;
   height: 400px;
+  text-align: center;
+
+  h1 {
+    font-size: 42px;
+    margin: 0em 0em;
+  }
+
+  .main {
+    line-height: 2.5em;
+    margin: 2em 0em;
+    font-size: 14px;
+  }
+
+  .sub {
+    line-height: 2.5em;
+    font-size: 14px;
+    margin-bottom: 3em;
+  }
+
+  .quote {
+    position: relative;
+    margin: 1em 0em;
+    text-align: center;
+  }
+
+  .quote-attrib {
+    margin: 0.5em 0em;
+  }
+}
+
+#section-campfire {
+  position: fixed;
+  margin: 0px;
+  padding: 0px;
+  z-index: 2;
+}
+
+#section-campfire-child {
+  position: fixed;
+  left: 50%;
+  margin-left: -37.5%;
+  opacity: 0;
+  width: 75%;
+  height: 75%;
+  min-height: 400px;
 }
