--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -12,3 +12,11 @@
   -o-transition: $transitions;
   transition: $transitions;
 }
+
+@mixin flex-container{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex; 
+}
