Styled workshop section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -187,6 +187,17 @@ h1, h2, h3, h4, h5, h6, h7 {
 /*======================================================*\
  * Parallax Triggers
 \*======================================================*/
+#section-workshop-trigger {
+  height: 1200px;
+}
+
+#section-work-trigger {
+  height: 1200px;
+}
+
+#section-approach-trigger {
+  height: 1200px;
+}
 #section-about-trigger {
   height: 1200px;
 }
@@ -195,13 +206,6 @@ h1, h2, h3, h4, h5, h6, h7 {
   height: 1200px;
 }
 
-#section-approach-trigger {
-  height: 1200px;
-}
-
-#section-work-trigger {
-  height: 1200px;
-}
 
 /*======================================================*\
  * Scroll up
@@ -334,6 +338,73 @@ h1, h2, h3, h4, h5, h6, h7 {
 }
 
 //-------------------------------------
+// section-workshop
+//-------------------------------------
+#section-workshop {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  bottom: 0px;
+}
+
+#section-workshop-child {
+  @include flex-container; 
+
+  position: fixed;
+  top: 1000px;
+  left: 50%;
+  margin-left: -37.5%;
+  opacity: 0;
+  width: 75%;
+  height: 400px;
+  text-align: left;
+
+  #work-right {
+    flex: 1;
+    order: 2; 
+    padding: 1em; 
+    h1 {
+      font-size: 38px;
+      line-height: 110%;
+      font-weight: 500;
+      margin: 0em 0em;
+      max-width: 50%;
+    }
+
+    .main {
+      line-height: 2.5em;
+      margin: 2em 0em 2em;
+      font-size: 14px;
+    }
+
+    a {
+      align-self: flex-end;
+    }
+  }
+  #work-left {
+    flex: 1;
+    order: 1;
+    padding: 1em;
+
+    #workshop-quote {
+      margin: 4em 0em 3em;
+      .quote {
+        position: relative;
+        text-align: center;
+      }
+
+      .quote-attrib {
+        margin: 0.5em 0em;
+      }
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+//-------------------------------------
 // section-work
 //-------------------------------------
 #section-work {
@@ -414,10 +485,10 @@ h1, h2, h3, h4, h5, h6, h7 {
         }
       }
       #work-story-3 {
+        align-self: flex-end;
         img {
           width: 100%;
         }
-        align-self: flex-end;
       }
     }
   }
