--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -377,12 +377,39 @@ h1, h2, h3, h4, h5, h6, h7 {
       font-size: 22px;
       flex: 1 100%;
     }
+    .line {
+      flex: 1 100%;
+      border-bottom: solid white 1px;
+      margin: 1em 0em;
+    }
     #contact-fields {
       flex: 1;
+      @include flex-container; 
+      justify-content: flex-end;
+      flex-flow: row wrap;
+      input {
+        flex: 1 100%;
+        width: 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin: 0.2em 0em;
+      }
+      .line {
+        flex: 1 100%;
+        border-bottom: solid white 1px;
+        margin: 1.8em 0em 2em;
+      }
+      a {
+        display: block;
+      }
     }
     #contact-info {
       flex: 1;
-
+      margin-left: 1em;
+      a {
+        color: white;
+      }
     }
   }
 
