Added max-width to About section text

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -740,14 +740,16 @@ h1, h2, h3, h4, h5, h6, h7 {
 
   .main {
     line-height: 2.5em;
-    margin: 2em 0em;
+    margin: 2em auto;
     font-size: 14px;
+    max-width: 60em;
   }
 
   .sub {
     line-height: 2.5em;
     font-size: 14px;
-    margin-bottom: 3em;
+    margin: 0em auto 3em;
+    max-width: 60em;
   }
 
   .quote {
