--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -20,3 +20,9 @@
   display: -webkit-flex;
   display: flex; 
 }
+
+@mixin calc($property, $expression) { 
+  #{$property}: -webkit-calc(#{$expression}); 
+  #{$property}: -moz-calc(#{$expression}); 
+  #{$property}: calc(#{$expression}); 
+} 
