--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -181,18 +181,25 @@ $icon-font-path: '../fonts/';
     color: white;
   }
 
-  .social {
-    position: absolute;
+  .social-fixed {
+    position: fixed;
     bottom: 20px;
     left: 50%;
-    width: 200px;
-    margin-left: -100px;
+    width: 24em;
+    margin-left: -12em;
     color: white;
     text-align: center;
-    font-size: 18px;
+    font-size: 22px;
+    opacity: 0;
+    @include transition(opacity 1s ease-in-out);
     a {
       color: white;
+      margin: 0em 0.2em;
     }
+  }
+
+  .social-show {
+    opacity: 1;
   }
 
   /*======================================================*\
@@ -291,45 +298,6 @@ $icon-font-path: '../fonts/';
     top: 2em;
     left: 2em;
   }
-
-  #campfire-wrapper {
-    @extend .wrapper;
-
-    position: absolute;
-    bottom: 50%;
-    left: 50%;
-    margin-left: -30em;
-    width: 60em;
-    text-align: center;
-
-    h1 {
-      font-size: 36px;
-      margin: 0em 0em;
-      font-weight: 100;
-      font-family: "roboto-light", san-serif;
-    }
-
-    div {
-      font-size: 2.5em;
-      font-weight: 100;
-      span {
-        display: inline-block;
-      }
-    }
-
-    #btn-find-story {
-      position: absolute;
-      left: 0;
-      margin-top: 4em;
-    }
-
-    #btn-telling-it {
-      position: absolute;
-      right: 0;
-      margin-top: 4em;
-    }
-  }
-
 
   #campfire-aside {
     position: absolute;
@@ -805,5 +773,44 @@ $icon-font-path: '../fonts/';
     width: 75%;
     height: 75%;
     min-height: 400px;
+  }
+
+  #campfire-wrapper {
+    @extend .wrapper;
+
+    position: absolute;
+    bottom: 50%;
+    right: 0%;
+    margin-left: -30em;
+    width: 100%;
+    text-align: center;
+
+    h1 {
+      font-size: 24px;
+      margin: 0em auto;
+      max-width: 80%;
+      font-weight: 100;
+      font-family: "roboto-light", san-serif;
+    }
+
+    div {
+      font-size: 2.5em;
+      font-weight: 100;
+      span {
+        display: inline-block;
+      }
+    }
+
+    #btn-find-story {
+      position: absolute;
+      left: 0;
+      margin-top: 4em;
+    }
+
+    #btn-telling-it {
+      position: absolute;
+      right: 0;
+      margin-top: 4em;
+    }
   }
 }
